# roxy

./: CHANGELOG.md  Cargo.toml  README.md  clippy.toml  pr-body.md
.github/workflows/: ci.yml  release.yml
examples/: roxer.rs
src/: common.rs  config.rs  hwinfo.rs  ifconfig.rs  lib.rs  main.rs  ntp.rs  review_client.rs  root.rs  services.rs  sshd.rs  syslog.rs  task.rs  ufw.rs  user.rs
src/common/: interface.rs  services.rs
src/root/: hwinfo.rs  ifconfig.rs  ntp.rs  services.rs  sshd.rs  syslog.rs  task.rs  ufw.rs
src/user/: hwinfo.rs  process.rs  usg.rs
test-roxy/: Cargo.toml
test-roxy/src/: lib.rs  main.rs
tests/: e2e_review_client.rs  main_pipeline.rs
