[package]
name = "roxy"
version = "0.5.1"
edition = "2024"

[dependencies]
anyhow = "1"
async-trait = "0.1.89"
bincode = "1.3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
config = "0.15"
data-encoding = "2"
gethostname = "1.0"
hostname = { version = "0.4", features = ["set"] }
ipnet = "2.11"
nix = { version = "0.31", features = ["reboot", "fs"] }
pnet = { version = "0.35", features = ["pnet_datalink", "std"] }
quinn = { version = "0.11", default-features = false }
regex = "1.11"
review-protocol = { git = "https://github.com/petabi/review-protocol.git", tag = "0.16.0", version = "0.16.0", features = ["client"] }
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
serde_with = "3"
serde_yaml = "0.9"
sysinfo = "0.38"
systemctl = "0.5"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uptime_lib = "0.3"

[dev-dependencies]
quinn = { version = "0.11", features = ["ring", "runtime-tokio"] }
rcgen = "0.14"
review-protocol = { git = "https://github.com/petabi/review-protocol.git", tag = "0.16.0", features = ["server"] }
rustls = { version = "0.23", features = ["ring"] }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt"] }

[lints.clippy]
pedantic = "warn"
unwrap_used = "warn"
